# worldmonitor

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  live-channels.html  middleware.ts  package-lock.json  settings.html  vercel.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_data_source.yml
.github/workflows/: build-desktop.yml
api/: _api-key.js  _cors.js  register-interest.js
api/youtube/: embed.js
docs/: ARCHITECTURE.md  COMMUNITY-PROMOTION-GUIDE.md  DOCUMENTATION.md
docs/Docs_To_Review/: DOCUMENTATION.md
pro-test/: index.html  metadata.json
pro-test/src/: App.tsx
public/: llms-full.txt  llms.txt
public/.well-known/: security.txt
public/pro/: index.html
scripts/: seed-ucdp-events.mjs
src/: App.ts  live-channels-window.ts  main.ts  settings-window.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: event-handlers.ts  panel-layout.ts
src/components/: CountryTimeline.ts  DeckGLMap.ts  GlobeMap.ts  IntelligenceGapBadge.ts  Panel.ts  ProBanner.ts  SearchModal.ts  StoryModal.ts  WorldClockPanel.ts
src/config/: beta.ts  panels.ts  pipelines.ts  variant-meta.ts  variant.ts
src/locales/: ar.json  bg.json  cs.json  de.json  el.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ro.json  ru.json  sv.json  th.json  tr.json  vi.json  zh.json
src/services/: happy-share-renderer.ts  persistent-cache.ts  runtime-config.ts  runtime.ts  storage.ts  (+4 more)
(+32 files in other folders)
